--- a/css/_fonts.css
+++ b/css/_fonts.css
@@ -1,9 +1,16 @@
 :root {
   --font-family-danger: 'Another Danger', sans-serif;
+  --font-family-montserrat: 'Montserrat Bold', sans-serif;
 }
 
 @font-face{
   font-family: 'Another Danger';
   font-style: normal;
   src: url('../typography/Another-Danger.ttf')  format('truetype');
+}
+
+@font-face{
+  font-family: 'Montserrat Bold';
+  font-style: normal;
+  src: url('../typography/Montserrat-Bold.ttf')  format('truetype');
 }
