design/tour-dates

--- a/css/_colors.css
+++ b/css/_colors.css
@@ -3,4 +3,5 @@
   --color-gray:rgba(100, 100, 100, .8);
   --color-red:rgba(215, 44, 44, 0.5);
   --color-black:black;
+  --color-gray-dark:#333;
 }
