--- a/css/_colors.css
+++ b/css/_colors.css
@@ -7,4 +7,5 @@
   --color-red-youtube:#cc181e;
   --color-green-spotify:#1db954;
   --color-black-opacity:rgba(0, 0, 0, .95);
+  --color-white-snow:#FFFAFA;
 }
